update codigo